Fixed add step overlap.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -300,7 +300,7 @@ a.delete {
   border-top: 1px solid #cdcdcd;
   padding: 10px;
   position: relative;
-  z-index: 2;
+  z-index: 1;
 }
 
 .new-sub-action {
